--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,14 +1,20 @@
+
+<% if user_signed_in? %>
+	<p> YOOO are logged in! </p>
+
+<% else %>
 <div class ="hero-unit">
-<h1>Hey there this a homepage</h1>
-<p>
-	you found us!
-	<%= link_to "One Month Rails", "http://onemonthrails.com" %>
-	
+	<h1>Hey there this a homepage</h1>
+	<p>
+		you found us!
+		<%= link_to "One Month Rails", "http://onemonthrails.com" %>
+		
 
-</p>
-<p>
-	
-		<%= link_to "Sign Up Now", "#", class: "btn btn-primary btn-large"%>
+	</p>
+	<p>
+		
+			<%= link_to "Sign Up Now", new_user_registration_path, class: "btn btn-primary btn-large"%>
+	</p>
+	</div>
 
-</p>
-</div>
+<% end %>
