added a link to login homepage

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 
 <% if user_signed_in? %>
-	<p> YOOO are logged in! </p>
+	<%= link_to "Upload pins", pins_path %>
 
 <% else %>
 <div class ="hero-unit">
