--- a/app/views/pins/show.html.erb
+++ b/app/views/pins/show.html.erb
@@ -9,10 +9,10 @@
 		<%= @pin.user.name %>
 		</p>
 		<% if current_user == @pin.user %>
-		<%= link_to 'Edit', edit_pin_path(@pin) %> |
-		<% end %>
-	                                                          
+		<%= link_to 'Edit', edit_pin_path(@pin) %>
 
+		 <%= link_to 'Destroy', @pin, method: :delete, data: { confirm: 'Are you sure?' } %>
+		<% end %>	                                                      
 		</div>
 	</div>
 </div>
